--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -28,10 +28,14 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    environment: github-pages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Dump Github Vars
+        env:
+          NEXT_PUBLIC_API_URL: ${{ vars.API_URL }}
+        run: echo "$NEXT_PUBLIC_API_URL"
 
       - name: Detect package manager
         id: detect-package-manager
